--- a/core/components/sass/components/header-footer/_search.scss
+++ b/core/components/sass/components/header-footer/_search.scss
@@ -71,7 +71,7 @@
   }
 
   &.mobile-only {
-    margin:10px 10px;
+    margin: 15px 30px 0;
   }
 }
 
